# coreboot

./: .gitmodules  CODEOWNERS  Makefile  Makefile.inc  README.md  context.md  vilboz_defconfig
.github/workflows/: project_hourly_mirror.yml  project_incremental_coreboot_build.yml
.pi-subagents/artifacts/: 55e1d653_oracle_2_input.md  55e1d653_oracle_2_meta.json  55e1d653_oracle_2_output.md  55e1d653_oracle_2_transcript.jsonl  55e1d653_reviewer_1_input.md  55e1d653_reviewer_1_meta.json  55e1d653_reviewer_1_output.md  55e1d653_reviewer_1_transcript.jsonl  55e1d653_scout_0_input.md  55e1d653_scout_0_meta.json  55e1d653_scout_0_output.md  55e1d653_scout_0_transcript.jsonl  7ccc8f49_reviewer_0_input.md  7ccc8f49_reviewer_0_meta.json  7ccc8f49_reviewer_0_output.md  88f40514-de5f-47b7-8d1a-4b47a02ddc2c_oracle_2_input.md  88f40514-de5f-47b7-8d1a-4b47a02ddc2c_oracle_2_meta.json  88f40514-de5f-47b7-8d1a-4b47a02ddc2c_oracle_2_output.md  88f40514-de5f-47b7-8d1a-4b47a02ddc2c_oracle_2_transcript.jsonl  88f40514-de5f-47b7-8d1a-4b47a02ddc2c_reviewer_0_input.md  88f40514-de5f-47b7-8d1a-4b47a02ddc2c_reviewer_0_meta.json  (+51 more)
Documentation/: cbfstool-rs-manifest-plan.md  cbfstool-rs-vboot-plan.md
configs/: config.amd_onyx
src/: Kconfig
src/acpi/: acpi.c  (+2 more)
util/cbfstool-rs/: Cargo.toml  README.md
util/cbfstool-rs/src/: elf.rs  error.rs  fmap.rs  fmd.rs  image.rs  lib.rs  util.rs
util/cbfstool-rs/src/cbfs/: attributes.rs  compression.rs  entry.rs  mod.rs  writer.rs
util/cbfstool-rs/src/format/: cbfs.rs  fmap.rs  mod.rs
util/cbfstool-rs/src/vboot/: hash.rs  metadata.rs  mod.rs
(+253 files in other folders)
